What's New for OpenJPEG

* : fixed
- : removed
! : changed
+ : added

October 22, 2010
+ [szukw000] added 'libopenjpeg.pc.in'
! [szukw000] changed 'configure.ac' to create 'libopenjpeg.pc'
! [szukw000] changed 'Makefile.am' to [un]install 'libopenjpeg.pc'
! [szukw000] changed 'doc/Makefile.am' : 'uninstall-hook' added

October 20, 2010 
* [antonin] fixed help display (patch from winfried)

October 20, 2010 
* [antonin] 
    fixed paths to png and tiff in CMakeLists.txt (patch from winfried)
    fixed link to lcms library (patch from winfried)

October 18, 2010 
* [antonin] fixed options and help display (patch from winfried) 

October 18, 2010
! [szukw000]
	doc/Makefile.am 
	doc/Makefile.nix
	jp3d/Makefile.nix
	jpwl/Makefile.nix
	Makefile.nix
	config.nix

October 17, 2010
- [szukw000] doc/man/ : directory removed
! [szukw000]
	configure.ac : 'enable_shared' YES by default
	doc/Makefile.am :
		'all-local' and 'install-data-hook' added
		'with_doxygen' conditional added
	Makefile.am : 'doc' directory no longer substituted in SUBDIRS

	to link binaries statically: '-static' added to:
		codec/Makefile.am
		mj2/Makefile.am
		jpwl/Makefile.am
		jp3d/codec/Makefile.am

	mj2/Makefile.am : 'with_libjpwl' removed
	mj2/Makefile.nix : 'with_libjpwl' removed

	config.nix : 'WITH_JPWL', 'WITH_JP3D' added
	doc/Makefile.nix : 'clean', 'install', 'uninstall' added
	Makefile.nix : 'WITH_JPWL', 'WITH_JP3D' added

	INSTALL : topic 3) changed regarding the changes in 'config.nix'

October 13, 2010
! [szukw000] 
	configure.ac
	bootstrap.sh

	'with_libjpwl' removed from:
		libopenjpeg/Makefile.am
		codec/Makefile.am
		codec/Makefile.nix
		Makefile.nix

October 10, 2010
* [antonin] Patch from winfried

				1. The jp3d/libjp3dvm/Makefile.am has been changed:

				Installing: /usr/local/TEST_CONFIG/include/openjpeg3d-1.3/
				Installing: /usr/local/TEST_CONFIG/include/openjpeg3d-1.3/openjpeg3d.h

				PREFIX/include:

					 23  openjpeg.h -> openjpeg-1.4/openjpeg.h